--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   leafy-postgres:
-    image: docker pull junghoonkim/leafy-postgres:7b8b6af751bd4587fcbc8ce6f0814cbdc7479465
+    image: junghoonkim/leafy-postgres:7b8b6af751bd4587fcbc8ce6f0814cbdc7479465
     volumes:
       - mydata:/var/lib/postgresql/data
     deploy:
@@ -26,7 +26,7 @@ services:
     restart: on-failure
       
   leafy-front:
-    image: docker pull junghoonkim/leafy-frontend:755afc7b80d7086d00449a88579d744e971be791
+    image: junghoonkim/leafy-frontend:755afc7b80d7086d00449a88579d744e971be791
     
     environment:
       - BACKEND_HOST=leafy-backend
